eurosys accepted version

--- a/acks.tex
+++ b/acks.tex
@@ -1,3 +1,4 @@
-\label{s:acknowledgements}
-\paragrapha{Acknowledgements} We thank xxx.
-This work was supported in part by DARPA contract HR001117C0048 and NSF grant 1407470.
+\begin{acks}
+We thank Srinivas Narayana, Ahmed Saeed, and Rachee Singh for their helpful discussions and feedback.
+This work is supported in part by DARPA contract HR001117C0048 and NSF grants 1526791, 1563826, and 1407470.
+\end{acks}
