--- a/cc-comparison.tex
+++ b/cc-comparison.tex
@@ -3,7 +3,7 @@
     \begin{subfigure}[b]{0.5\textwidth}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/cc:comparison:a-1} 
+\includegraphics[width=\maxwidth]{figure/cc_comparison_a-1} 
 
 \end{knitrout}
     \caption{Throughput Comparison.}\label{fig:cc:comparison:a}
@@ -11,7 +11,7 @@
     \begin{subfigure}[b]{0.5\textwidth}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/cc:comparison:b-1} 
+\includegraphics[width=\maxwidth]{figure/cc_comparison_b-1} 
 
 \end{knitrout}
     \caption{Delay Comparison.}\label{fig:cc:comparison:b}
