--- a/elastic-cross.tex
+++ b/elastic-cross.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/robust:cr-elastic-1} 
+\includegraphics[width=\maxwidth]{figure/robust_cr-elastic-1} 
 
 \end{knitrout}
     \caption{Varying number of competing buffer-filling cross traffic flows. \name controls a fixed 20 buffer-filling flows in each case.}
