--- a/fifo-not-enough.tex
+++ b/fifo-not-enough.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:fifo-1} 
+\includegraphics[width=\maxwidth]{figure/eval_fifo-1} 
 
 \end{knitrout}
     \caption{With FIFO scheduling, the benefits of \name are lost: FCTs are 31\% worse in the median. Note the different y-axis scales for each group of request sizes.}
