--- a/graphs/strict-prio.Rnw
+++ b/graphs/strict-prio.Rnw
@@ -1,4 +1,4 @@
-<<robust:strict-prio,cache=TRUE,echo=FALSE,warning=FALSE>>=
+<<robust_strict-prio,cache=TRUE,echo=FALSE,warning=FALSE>>=
 df <- read.csv("data/strictprio.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
 df$ofct <- (df$Size / 12e6) + 0.05
