--- a/graphs/varying-offered-load.Rnw
+++ b/graphs/varying-offered-load.Rnw
@@ -1,6 +1,6 @@
 \begin{figure*}[ht!]
     \centering
-<<eval:offeredload,fig.showtext=TRUE,cache=TRUE,echo=FALSE,warning=FALSE,message=FALSE,fig.width=15,fig.height=3>>=
+<<eval_offeredload,fig.showtext=TRUE,cache=TRUE,echo=FALSE,warning=FALSE,message=FALSE,fig.width=15,fig.height=3>>=
 library(ggplot2)
 library(patchwork)
 library(showtext)
