--- a/packages.tex
+++ b/packages.tex
@@ -108,7 +108,7 @@
 %\usepackage{leading}
 %\leading{12pt}
 %
-\usepackage{minted}
+% \usepackage[frozencache]{minted}
 \usepackage{listings}
 \lstset{
   columns=flexible,
