--- a/proxy.tex
+++ b/proxy.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:proxy-1} 
+\includegraphics[width=\maxwidth]{figure/eval_proxy-1} 
 
 \end{knitrout}
     \caption{A proxy-based implementation of \name could yield further benefits to the long flows. Note the different y-axis scales for each group of request sizes.}
