--- a/tput-delay.tex
+++ b/tput-delay.tex
@@ -3,7 +3,7 @@
     \begin{subfigure}[b]{0.5\textwidth}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:tput-delay:a-1} 
+\includegraphics[width=\maxwidth]{figure/eval_tput-delay_a-1} 
 
 \end{knitrout}
     \caption{Throughput (in Mbit/s) Comparison.}\label{fig:eval:tputdelay:a}
@@ -11,7 +11,7 @@
     \begin{subfigure}[b]{0.5\textwidth}
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:tput-delay:b-1} 
+\includegraphics[width=\maxwidth]{figure/eval_tput-delay_b-1} 
 
 \end{knitrout}
     \caption{Delay (in ms) Comparison.}\label{fig:eval:tputdelay:b}
