--- a/varying-offered-load.tex
+++ b/varying-offered-load.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:offeredload-1} 
+\includegraphics[width=\maxwidth]{figure/eval_offeredload-1} 
 
 \end{knitrout}
     \caption{\name offers diminishing returns with lower amounts of offered load.}
