--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,10 @@
 \section{Conclusion}\label{s:concl}
-We have described \name, a new type of middlebox which uses congestion control to shift the queues from the middle of the network, where it is difficult to unilaterally express scheduling policy, to the edge, where doing so is tractable.
-We demonstrate, using both an emulated network and real Internet paths, that it is possible to shift queues and schedule packets to an extent sufficient to express well-known scheduling disciplines. 
+We have described \name, a new type of middlebox which uses a novel ``inner''  congestion control loop for traffic bundles between two sites to shift the queues from the middle of the network, where it is difficult to unilaterally express traffic control policy, to the site itself, where doing so is tractable. 
+\name neither maintains any per-flow state, nor makes any modifications to the packets. 
+We demonstrate, using both emulated network experiments and real Internet paths, that it is possible to shift queues and schedule packets to an extent sufficient to enforce well-known scheduling disciplines. 
+
 \cut{In our experiments, we used fair queueing to improve median FCTs by \overviewBenefitsBundlerMedianImprovement, strict prioritization to improve $99$\%ile FCTs of a high-priority traffic class by \strictPrioImprovement, and AQM to reduce end-to-end packet delays by \delaysImprovement.}
+\vspace{-5pt}
 %\paragrapha{Statement of ethics considerations} This work does not raise any ethical issues.
+
+\input{acks}
