--- a/congestion-control.tex
+++ b/congestion-control.tex
@@ -2,12 +2,13 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:cc-1} 
+\includegraphics[width=\maxwidth]{figure/eval_cc-1} 
 
 \end{knitrout}
     \caption{Choosing a congestion control algorithm at \name remains important, just as it is at the end-host. Note the different y-axis scales for each group of request sizes.}
     \label{fig:eval:cc}
 \end{figure}
+%\vspace{-5pt}
 \newcommand{\ccCopaMedian}{1.09\xspace}
 \newcommand{\ccNimbusMedian}{1.32\xspace}
 \newcommand{\ccBBRMedian}{1.91\xspace}
