--- a/e2e.tex
+++ b/e2e.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:e2e-1} 
+\includegraphics[width=\maxwidth]{figure/eval_e2e-1} 
 
 \end{knitrout}
     \caption{\name still provides benefits when the endhosts use different congestion control algorithms.}
