--- a/graphs/proxy.Rnw
+++ b/graphs/proxy.Rnw
@@ -1,6 +1,6 @@
 \begin{figure}
     \centering
-<<eval:proxy,fig.showtext=TRUE,cache=TRUE,echo=FALSE,warning=FALSE,message=FALSE,fig.width='\\columnwidth',fig.height=3>>=
+<<eval_proxy,fig.showtext=TRUE,cache=TRUE,echo=FALSE,warning=FALSE,message=FALSE,fig.width='\\columnwidth',fig.height=3>>=
 library(ggplot2)
 library(showtext)
 font_add_google("Lato")
