--- a/inelastic-cross.tex
+++ b/inelastic-cross.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/robust:cr-inelastic-1} 
+\includegraphics[width=\maxwidth]{figure/robust_cr-inelastic-1} 
 
 \end{knitrout}
     \caption{Against cross traffic comprising of short lived flows. \name offers 48Mbps of load to the bottleneck queue. The cross traffic's offered load increases along the x-axis, while \name{}'s offered load remains fixed.}
