--- a/micro-time-delay.tex
+++ b/micro-time-delay.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/micro:time-delay-1} 
+\includegraphics[width=\maxwidth]{figure/micro_time-delay-1} 
 
 \end{knitrout}
 
