--- a/overview-benefits.tex
+++ b/overview-benefits.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:best-1} 
+\includegraphics[width=\maxwidth]{figure/eval_best-1} 
 
 \end{knitrout}
     \caption{\name achieves 28\% lower median slowdown. 
