--- a/realworld.tex
+++ b/realworld.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:realworld-1} 
+\includegraphics[width=\maxwidth]{figure/eval_realworld-1} 
 
 \end{knitrout}
 \newcommand{\realworldMedianLatencyImprovement}{57\%\xspace}
