--- a/twobundler.tex
+++ b/twobundler.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/robust:twobundler-1} 
+\includegraphics[width=\maxwidth]{figure/robust_twobundler-1} 
 
 \end{knitrout}
     \caption{Competing traffic bundles. In both cases, the aggregate offered load is 84Mbps, as in Figure~\ref{fig:eval:best}. For "1:1", we evenly split the offered load between the two Bundles; for "2:1", one bundle has twice the offered load of the other. In both cases, each bundle observes improved median FCT compared to its performance in the baseline scenario.}
