--- a/waterfall.tex
+++ b/waterfall.tex
@@ -2,7 +2,7 @@
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-\includegraphics[width=\maxwidth]{figure/eval:waterfall-1} 
+\includegraphics[width=\maxwidth]{figure/eval_waterfall-1} 
 
 \end{knitrout}
     \caption{\name with SFQ achieves fair and stable rates.}
