--- a/graphs/inelastic-cross.Rnw
+++ b/graphs/inelastic-cross.Rnw
@@ -7,7 +7,7 @@ library(patchwork)
 font_add_google("Lato")
 showtext_auto()
 
-df <- read.csv("data/new/vary_inelastic.data", sep=" ")
+df <- read.csv("data/vary_inelastic.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
 df$ofct <- (df$Size / 12e6) + 0.05
 df$Slowdown <- df$Duration / df$ofct
