--- a/packages.tex
+++ b/packages.tex
@@ -131,7 +131,7 @@
 \newcommand{\eg}{e.g., }
 \newcommand{\etc}{{etc.}\xspace}
 \newcommand{\ie}{i.e., }
-\newcommand{\etal}{\emph{et al.}}
+\newcommand{\etal}{\emph{et al.}\xspace}
 
 \usepackage{expl3}
 \usepackage{environ}
