--- a/ref.bib
+++ b/ref.bib
@@ -1830,3 +1830,32 @@ title = {{Rack-Level Congestion Control}},
 year = {2016},
 booktitle = {HotNets},
 }
+
+@article{bottleneck-of-china,
+    author = {Zhu, Pengxiong and Man, Keyu and Wang, Zhongjie and Qian, Zhiyun and Ensafi, Roya and Halderman, J. Alex and Duan, Haixin},
+    title = {Characterizing Transnational Internet Performance and the Great Bottleneck of China},
+    year = {2020},
+    issue_date = {March 2020},
+    volume = {4},
+    number = {1},
+    doi = {10.1145/3379479},
+    journal = {Proc. ACM Measurement and Analalysis of Computer Systems},
+    month = may,
+    articleno = {13},
+}
+
+@inproceedings{blameit,
+    author = {Jin, Yuchen and Renganathan, Sundararajan and Ananthanarayanan, Ganesh and Jiang, Junchen and Padmanabhan, Venkata N. and Schroder, Manuel and Calder, Matt and Krishnamurthy, Arvind},
+    title = {Zooming in on Wide-Area Latencies to a Global Cloud Provider},
+    year = {2019},
+    booktitle = {SIGCOMM},
+    doi = {10.1145/3341302.3342073},
+}
+
+@misc{mlab-tr,
+    title={ISP interconnection and its impact on consumer Internet performance-a measurement lab consortium technical report},
+    author={M-Lab Research Team and others},
+    year={2014},
+    howpublished = {\url{https://www.measurementlab.net/publications/isp-interconnection-impact.pdf}},
+}
+
