--- a/queue-control.tex
+++ b/queue-control.tex
@@ -62,11 +62,11 @@ How should we achieve this target queueing delay?
 This problem is similar to the role of the PIE AQM mechanism~\cite{pie}, which also seeks to maintain a queueing delay target.
 Correspondingly, we design a PI controller at the \inbox as part of the fairness control module. 
 It overlays a rate $r$ corresponding to $\dot{r}(t) = \alpha (q - q_T) + \beta (\dot{q})$, where $q$ is the queue size and $q_T$ is the target queue size computed above.
-We pick $\alpha = 10$ and $\beta = 10$ by solving for a convergence time of one RTT.% as per \S\ref{s:qctl:pi}.
+We pick $\alpha = 10$ and $\beta = 10$ by solving for a convergence time of one RTT (Appendix~\ref{app:derive-ab}).
+% as per \S\ref{s:qctl:pi}.
 
-\cut{
 \begin{Appendix}
-\section{Queue Controller Stability}\label{s:qctl:pi}
+\section{Queue Controller Stability}\label{app:derive-ab}
 
 We control the queues with the update function 
 \begin{equation} 
@@ -121,7 +121,6 @@ r_1 = \frac{-\beta + \sqrt{\beta^2 - 4\alpha}}{2}, r_2 = \frac{-\beta - \sqrt{\b
 
 $\alpha = 10, \beta = 10$ satisfy these constraints.
 \end{Appendix}
-}
 
 \subsection{Imbalanced Multipathing}\label{s:queue-ctl:ecmp}
 Since a \bundle contains many component connections, a load balancer may send them along different paths. If the load along different paths is well-balanced, \name will accurately treat a load-balanced bottleneck link as a single link with the aggregate rate of each sub-link. However, when the load along different paths is imbalanced, the series of measurements at the \name will be a random sampling of the different paths, which would confuse the delay-control algorithm and cause it to perform poorly. Fortunately, such cases are straight-forward to detect with our measurement technique. 
