--- a/eval.tex
+++ b/eval.tex
@@ -27,10 +27,9 @@ The workload is heavy-tailed: 97.6\% of requests are 10KB or shorter, and the la
 Each server then sends the requested amount of data to the client and we measure the FCT of each such request. 
 The link bandwidth at the mahimahi link is set to 96Mbps, and the RTT is set to 50ms. The requests result in an offered load of 84Mbps. 
 
-The endhost runs Cubic~\cite{cubic}, and the \inbox runs Copa~\cite{copa} (we test other schemes in \S\ref{s:eval:cc}) with Nimbus~\cite{nimbus-arxiv} for cross traffic detection. 
+The endhost runs Cubic~\cite{cubic}, and the \inbox runs Copa~\cite{copa} (we test other schemes in \S\ref{s:eval:cc}) with Nimbus~\cite{nimbus-arxiv} for cross traffic detection.
+The \inbox schedules traffic using the Linux kernel implementation of Stochastic Fairness Queueing (SFQ)~\cite{sfq}, though we briefly evaluate other policies in \Sec{s:eval:fct}.
 Each experiment is comprised of 1,000,000 requests sampled from this distribution, across 10 runs each with a different random seed.
-%\an{new, short version of ``applying different scheduling policies''}:
-The \inbox schedules traffic using stochastic fair queueing~\cite{sfq} in our experiments. 
 
 
 \subsection{Understanding Performance Benefits}\label{s:eval:fct}
@@ -48,8 +47,8 @@ In this section, we evaluate the benefits provided by doing fair queuing at the 
 We evaluate three configurations: 
 (i) The ``\baseline'' configuration represents the status quo: the \inbox simply forwards packets as it receives them, and the mahimahi bottleneck uses FIFO scheduling.
 (ii) The ``\optimal'' configuration deploys fair queueing
-at the mahimahi bottleneck\footnote{
-We implement this scheme by modifying mahimahi (our patch comprises $171$ lines of C++) to add a packet-level fair-queueing scheduler to the bottleneck link.}. 
+at the mahimahi bottleneck.\footnote{
+We implement this scheme by modifying mahimahi (our patch comprises $171$ lines of C++) to add a packet-level fair-queueing scheduler to the bottleneck link.}
 Recall from \S\ref{s:intro} that this configuration is not deployable.
 %: it would force all customers --- who may desire diverging scheduling policies --- to use the same scheduler.
 (iii) The default \name configuration, that uses stochastic fair queueing~\cite{sfq} scheduling policy at the \inbox, and (iv) Using \name with FIFO (without exploiting scheduling opportunity).
