fig 8: more readable

--- a/queue-control.tex
+++ b/queue-control.tex
@@ -17,6 +17,7 @@ In this section, we describe how \name can re-use the same measurements from \S\
 % In these cases, \name gracefully degrades to status quo performance. 
 
 \subsection{Buffer-Filling Cross Traffic}
+\label{s:buffer-filling}
 
 %As \name uses a delay-minimizing congestion control algorithm to shift queue build up from the bottleneck to the \inbox.
 %A well-known property of delay-minimizing congestion control algorithms is that when competing with traditional loss-based controllers, they lose throughput~\cite{copa}.
